[gd_scene load_steps=2 format=3 uid="uid://bjvp6sd0ubyn"]

[ext_resource type="Script" uid="uid://mhncie7vtvyx" path="res://Scenes/MatchScene/MatchUI/PlayerStatsRow.gd" id="1_hi6h3"]

[node name="PlayerStatsRow" type="Control"]
custom_minimum_size = Vector2(1280, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_hi6h3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 31.0
color = Color(0.027451, 0.384314, 0.478431, 1)

[node name="AllItems" type="HBoxContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(1280, 26)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 31.0
mouse_filter = 2

[node name="Selected" type="CheckBox" parent="AllItems"]
layout_mode = 2
size_flags_horizontal = 3
text = "Selected"

[node name="FirstName" type="Label" parent="AllItems"]
layout_mode = 2
size_flags_horizontal = 3
text = "FName"
horizontal_alignment = 1

[node name="LastName" type="Label" parent="AllItems"]
layout_mode = 2
size_flags_horizontal = 3
text = "LName"
horizontal_alignment = 1

[node name="SpikeHeight" type="Label" parent="AllItems"]
layout_mode = 2
size_flags_horizontal = 3
text = "99"
horizontal_alignment = 1

[node name="BlockHeight" type="Label" parent="AllItems"]
layout_mode = 2
size_flags_horizontal = 3
text = "99"
horizontal_alignment = 1

[node name="Serve" type="Label" parent="AllItems"]
layout_mode = 2
size_flags_horizontal = 3
text = "99"
horizontal_alignment = 1

[node name="Spike" type="Label" parent="AllItems"]
layout_mode = 2
size_flags_horizontal = 3
text = "99"
horizontal_alignment = 1

[node name="Receive" type="Label" parent="AllItems"]
layout_mode = 2
size_flags_horizontal = 3
text = "99"
horizontal_alignment = 1

[node name="Set" type="Label" parent="AllItems"]
layout_mode = 2
size_flags_horizontal = 3
text = "99"
horizontal_alignment = 1

[node name="Stamina" type="Label" parent="AllItems"]
layout_mode = 2
size_flags_horizontal = 3
text = "99"
horizontal_alignment = 1

[connection signal="pressed" from="AllItems/Selected" to="." method="_on_selected_pressed"]
